// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders column_width properly 1`] = `
<div
  className="sc-bdVaJa jXBWHo"
>
  <div
    className="sc-bwzfXH hoTyyE"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Hello, world!</p>",
        }
      }
    />
  </div>
</div>
`;

exports[`renders fillwidth properly 1`] = `
<div
  className="sc-bdVaJa fCEylI"
>
  <div
    className="sc-bwzfXH hoTyyE"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Hello, world!</p>",
        }
      }
    />
  </div>
</div>
`;

exports[`renders overflow_fillwidth properly 1`] = `
<div
  className="sc-bdVaJa bSlqNG"
>
  <div
    className="sc-bwzfXH hoTyyE"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Hello, world!</p>",
        }
      }
    />
  </div>
</div>
`;
